# tinypad

./: .gitignore  .gitmodules  Makefile  README.md  compile_commands.json
client/: CMakeLists.txt  Info.plist  Makefile  README.md
client/include/: command.h  common.h  state.h
client/include/components/: app.h  config.h  loading.h
client/include/core/: device_discovery.h  device_link.h  device_settings.h  macro_map.h  mixer_state.h  profile_store.h
client/include/platform/: audio_backend.h  audio_simulated.h  com_init.h  keyboard_inject.h  mutex.h  serial_enum.h  serial_port.h  thread.h  tray.h
client/include/ui/: ui_bridge.h
client/src/: main.c
client/src/components/: app.c  loading.c  mixer.c  nav_bar.c  volume_item.c
client/src/core/: device_discovery.c  device_link.c  device_settings.c  macro_map.c  mixer_state.c  profile_store.c
client/src/platform/: com_init.c
client/src/platform/audio/: audio_linux_pipewire.c  audio_macos_coreaudio.m  audio_macos_stub.c  audio_simulated.c  audio_windows_wasapi.c
client/src/platform/keyboard/: keyboard_linux.c  keyboard_macos.c  keyboard_windows.c
client/src/platform/serial/: serial_enum_linux.c  serial_enum_macos.c  serial_enum_windows.c  serial_posix.c  serial_windows.c
client/src/platform/tray/: tray_linux.c  tray_macos.m  tray_windows.c
client/src/ui/: ui_bridge.c
client/tests/: test_core.c  webview_diag.cpp
client/ui/: index.html  package-lock.json  package.json  vite.config.ts
client/ui/scripts/: postbuild.mjs
client/ui/src/: App.tsx  index.css  types.ts
client/ui/src/components/device/: DeviceLayout.tsx  DisplayPanel.tsx  KeyButton.tsx  KeystrokeEditor.tsx  KnobButton.tsx  MacroActionEditor.tsx  ProfilesPanel.tsx  SessionsList.tsx  SimulationPanel.tsx  TopbarPanel.tsx
client/ui/src/components/ui/: kbd.tsx
client/ui/src/hooks/: useTinypadState.ts
client/ui/src/lib/: keystrokeCapture.test.ts  keystrokeCapture.ts  keystrokeParser.test.ts  keystrokeParser.ts  native.ts
firmware/: CMakeLists.txt  client.py  sdkconfig  sdkconfig.old
firmware/components/display/: CMakeLists.txt  display.cpp
firmware/components/display/include/: display.hpp
firmware/components/gpio/: gpio.c  gpio.h
firmware/components/gui/: CMakeLists.txt  gui.cpp
firmware/components/gui/include/: gui.hpp
firmware/components/input_manager/: CMakeLists.txt  input_manager.cpp
firmware/components/input_manager/include/: input_manager.hpp
firmware/components/protocol/: CMakeLists.txt  protocol.cpp
firmware/components/protocol/include/: protocol.hpp
firmware/components/state/: state.h
firmware/components/usb_manager/: CMakeLists.txt  usb_manager.cpp
firmware/components/usb_manager/include/: usb_manager.hpp
firmware/main/: CMakeLists.txt  firmware.c  firmware.cpp  idf_component.yml
include/: pipewire_interface.h  state.h
include/components/: mixer.h  nav_bar.h  style.h  volume_item.h
shared/: protocol.c  protocol.h
src/: command.c  gui.c  main.c  pipewire_interface.c  state.c
src/components/: config.c  nav_bar.c  style.c  volume_item.c
